--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -27,3 +27,75 @@ body {
   padding-right: 15px;
   padding-left: 15px;
 }
+
+
+.navbar-default {
+    background-color: #4caf50;
+    border-color: #388e3c;
+}
+.navbar-default .navbar-brand {
+    color: #ecf0f1;
+    font: sans-serif;
+}
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #c8e6c9;
+}
+.navbar-default .navbar-text {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #c8e6c9;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #c8e6c9;
+    background-color: #388e3c;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #c8e6c9;
+    background-color: #388e3c;
+}
+.navbar-default .navbar-toggle {
+    border-color: #388e3c;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #388e3c;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ecf0f1;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+    border-color: #ecf0f1;
+}
+.navbar-default .navbar-link {
+    color: #ecf0f1;
+}
+.navbar-default .navbar-link:hover {
+    color: #c8e6c9;
+}
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: #ecf0f1;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+        color: #c8e6c9;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #c8e6c9;
+        background-color: #388e3c;
+    }
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent; /* Removes border color */
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ecdbff; /* Changes regular toggle color */
+}
+.navbar-default .navbar-toggle .icon-bar:hover {
+    background-color: #c8e6c9; /* Changes toggle color on hover */
+}}
