--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -4,23 +4,27 @@ html {
 }
 
 body {
-  font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif /*rtl:prepend:"Droid Arabic Kufi","Droid Sans", */;
-  background: #fcfcfc url(/imgs/bg.jpg) repeat;
-  margin: 0px;
-  /* Margin bottom by footer height */
-  margin-bottom: 70px;
-  padding: 0px;
-  color: #555555;
-  min-width: 320px;
+    font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif /*rtl:prepend:"Droid Arabic Kufi","Droid Sans", */;
+    /*background: #fcfcfc url(/imgs/bg.jpg) repeat;*/
+    background-color: #eeeeee;
+    margin: 0px;
+    /* Margin bottom by footer height */
+    /*margin-bottom: 60px;*/
+    padding: 0px;
+    color: #555555;
+    min-width: 320px;
 }
 #content {
   padding-top: 70px;
 }
+
 #footer {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  height: 70px;
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    height: 60px;
+    background-color: #eeeeee;
+    color: #47a747;
 }
 
 #footer > .container {
@@ -28,6 +32,9 @@ body {
   padding-left: 15px;
 }
 
+hr {
+    border-top: 1px solid #47a747;
+}
 
 .navbar-default {
     background-color: #4caf50;
@@ -98,4 +105,6 @@ body {
 }
 .navbar-default .navbar-toggle .icon-bar:hover {
     background-color: #c8e6c9; /* Changes toggle color on hover */
-}}
+}
+
+
