Packages installed for profiles

--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -8,7 +8,7 @@
                     <li>Country</li>
                     <li>Timezone</li>
                     <li>email</li>
-                    <li></li>
+                    <li>isAdmin</li>
                 </ul>
             </div>
         </div>
